<resources>
    <string name="app_name">时代国际英语</string>
    <string name="tab_home">Home</string>
    <string name="tab_cooker">Cooker</string>
    <string name="tab_order">Orders</string>
    <string name="tab_user">ME</string>
    <string name="info_getnewest">信息已最新</string>
    <string name="loading">loading</string>
    <string name="action_settings">Settings</string>
    <string name="text">面带笑容，不气馁往前冲，我愈挫愈勇！！</string>
    <string-array name="cat_names">
        <item>George</item>
        <item>Zubin</item>
        <item>Carlos</item>
        <item>Frank</item>
        <item>Charles</item>
        <item>Simon</item>
        <item>Fezra</item>
        <item>Henry</item>
        <item>Schuster</item>
        <item>Abe</item>
        <item>Sally</item>
        <item>Geordie</item>
        <item>Alex</item>
        <item>Ebenezer</item>
        <item>Ulric</item>
        <item>Donovan</item>
    </string-array>
    <string-array name="custom_weekdays">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>
    <string name="about">关于</string>
    <string name="about_copyright_text">"版权所有 © 2015 Cooke
All 版权所有"</string>
    <string name="about_update_text">更新</string>
    <string name="about_us">关于</string>
    <string name="adhan_alarm_type_default">默认通知</string>
    <string name="adhan_alarm_type_slient">静音</string>
    <string name="cancel">取消</string>
    <string name="check_try_refresh">请检查网络或刷新</string>
    <string name="copy_to_clipboard">复制到剪贴板</string>
    <string name="data_load_fail">加载失败</string>
    <string name="down_load">下载</string>
    <string name="down_load_message">现在就下载它吗？</string>
    <string name="feedback">反馈</string>
    <string name="feedback_can_not_be_empty">内容不能为空</string>
    <string name="feedback_description_hint">如果您有任何问题，欢迎向我们反馈和咨询，感谢.</string>
    <string name="feedback_submit">发送</string>
    <string name="finish">完成</string>
    <string name="locating_text">定位中，请稍等</string>
    <string name="location_dialog_title">提示</string>
    <string name="location_fail">定位失败</string>
    <string name="net_err">请确保网络连接正常</string>
    <string name="network_is_not_available">无网络连接</string>
    <string name="never">从不</string>
    <string name="no_data_promot">没有相关的资源</string>
    <string name="no_net_display">没有网络</string>
    <string name="no_net_title">提示</string>
    <string name="ok">确定</string>
    <string name="retry">刷新</string>
    <string name="setting_pray_adjuest_time_min">分钟</string>
    <string name="setting_time_format_Twenty_four">24小时制</string>
    <string name="setting_time_format_twelve">12小时制</string>
    <string name="networkerror">网络错误!</string>
    <string name="toast_download_succ">下载完成</string>
    <string name="toast_location_keyword_none">请输入城市</string>
    <string name="toast_sd_none">SD卡无法使用</string>
    <string name="toast_wallpaper_download_error">下载错误，请重试</string>
    <string name="upgrade">升级</string>
    <string name="upgrade_checking">正在检查升级，请稍等...</string>
    <string name="upgrade_dialog_title">升级</string>
    <string name="upgrade_downloading_apk">正在下载，请等待…</string>
    <string name="upgrade_enable_cancel">取消</string>
    <string name="upgrade_enable_cb_text">忽略</string>
    <string name="upgrade_enable_title">新版本</string>
    <string name="upgrade_enable_upgrade">升级</string>
    <string name="upgrade_enable_versiontag">发现新版本</string>
    <string name="upgrade_enable_versionvalue">版本</string>
    <string name="upgrade_no_necessary">版本为最新版本，无需升级</string>
    <string name="dataerror">数据解析出错!</string>
    <string name="sending">正在发送</string>
    <string name="location_TypeServerError">服务端网络定位失败</string>
    <string name="location_TypeNetWorkException">网络不同导致定位失败，请检查网络是否通畅</string>
    <string name="location_TypeCriteriaException">无法获取有效定位依据导致定位失败，可以关闭飞行模式或者重启手机</string>
    <string name="Location_city">city</string>
    <string name="app_title">女性APP</string>
    <string name="serv_protect">服务与保障</string>
    <string name="serv_pleace">pleace</string>
    <string name="serv_time">time</string>
    <string name="more_rules">more</string>
    <string name="cookers">厨师</string>
    <string name="order_all">All Orders</string>
    <string name="order_paying">Paying</string>
    <string name="order_Refund">Refund</string>
    <string name="order_evaluation">Evaluation</string>
    <string name="myorders">My Orders</string>
    <string name="common_address_title">Common Address</string>
    <string name="common_address_return">Return</string>
    <string name="folder_all">All Images</string>
    <string name="preview">Preview</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="msg_amount_limit">Select images amount is limit</string>
    <string name="actionbar_activity_not_found">Failed to open intent...</string>
    <string name="share_by_weixin">微信分享</string>
    <string name="share_by_qq">QQ分享</string>
    <string name="share_by_yixin">易信分享</string>
    <string name="shake_share">注册摇一摇截图（分享）</string>
    <string name="shake_openshare">注册摇一摇（打开分享面板）</string>
    <string name="shake_scrshot">注册摇一摇（截图）</string>
    <string name="take_scrshot">直接截图</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="quit">退出</string>
    <string name="video_start_time">00:00</string>
    <string name="goto_video">摇一摇视频截图Activity</string>
    <string name="goto_game">游戏Activity</string>
    <string name="goto_common">普通Activity</string>
    <string name="video">VideoActivity</string>
    <string name="game">GameActivity</string>
    <string name="common">CommonActivity</string>
    <string name="back">返回</string>
    <string name="goto_facebook">添加Facebook分享</string>
    <string name="fb_login">Facebook登录</string>
    <string name="fb_logout">Facebook注销</string>
    <string name="fb_share">Facebook分享</string>
    <string name="laiwang_share">来往分享</string>
    <string name="instagram_share">Instagram分享</string>
    <string name="pocket_share">Pocket分享</string>
    <string name="linkedin_share">LinkedIn分享</string>
    <string name="foursquare_share">FourSquare分享</string>
    <string name="ynote_share">有道云笔记分享</string>
    <string name="evernote_share">印象笔记分享</string>
    <string name="pinterest_share">Pinterest分享</string>
    <string name="custom_platform_share">自定义平台分享</string>
    <string name="login_sina">登录（新浪微博）</string>
    <string name="logout_sina">注销登录（新浪微博）</string>
    <string name="login_qq">登录（QQ）</string>
    <string name="logout_qq">注销登录（QQ）</string>
    <string name="login_qzone">登录（QQ空间）</string>
    <string name="logout_qzone">注销登录（QQ空间）</string>
    <string name="whatsapp_share">whatsapp分享</string>
    <string name="line_share">line分享</string>
    <string name="tumblr_share">tumblr分享</string>
    <string name="kakao_share">Kakao Talk分享</string>
    <string name="flickr_share">flickr分享</string>
    <string name="fb_app_id">567261760019884</string>
    <string name="photo_post">Photo Post</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating Facebook status at </string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="facebook_app_id">1444817025830662</string>
    <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>
    <string name="applet_secimg_title">填写验证码</string>
    <string name="applet_secimg_change">换一张图片</string>
    <string name="applet_seccode_tip">验证码不能为空</string>
    <string name="applet_seccode_fail_tip">验证码错误，请重新输入</string>
    <string name="verify_password_null_tip">密码不能为空，请输入密码</string>
    <string name="fmt_date">M月d日</string>
    <string name="fmt_longdate">yyyy年M月d日</string>
    <string name="fmt_datetime" formatted="false">M月d日 %skk:mm</string>
    <string name="fmt_patime">kk:mm</string>
    <string name="fmt_longtime" formatted="false">yyyy年M月d日 %skk:mm</string>
    <string name="fmt_in60min" formatted="false">%d分钟前</string>
    <string name="fmt_justnow">1分钟内</string>
    <string name="fmt_dawn">凌晨</string>
    <string name="fmt_morning">早上</string>
    <string name="fmt_noon">中午</string>
    <string name="fmt_afternoon">下午</string>
    <string name="fmt_evening">晚上</string>
    <string name="fmt_pre_yesterday">昨天</string>
    <string name="fmt_iap_err" formatted="false">网络连接不可用，请稍候重试</string>
    <string name="hello">Hello World, SDKSampleActivity!</string>
    <string name="app_share">分享</string>
    <string name="enter">这是SDK_Sample的入口界面</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="goto_pay">跳转到支付界面</string>
    <string name="goto_fav">跳转到收藏界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>
    <string name="send_to_wx_title">发送到微信</string>
    <string name="get_from_wx_title">从微信接收</string>
    <string name="show_from_wx_title">显示微信请求的消息</string>
    <string name="pay_by_wx_title">通过微信支付</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="launch_from_wx">Launch From Weixin</string>
    <string name="input_openid">输入openid</string>
    <string name="input_scope">输入scope</string>
    <string name="send">发送到微信</string>
    <string name="receive">从微信接收</string>
    <string name="is_timeline">是否分享到朋友圈</string>
    <string name="send_text">发送文本</string>
    <string name="send_text_default">这段文字发送自微信SDK示例程序</string>
    <string name="data_nomore">没有更多数据</string>
    <string name="send_img">发送图片</string>
    <string-array name="send_img_item">
        <item>发送图片的二进制数据</item>
        <item>发送图片的本地路径</item>
        <item>发送图片的URL</item>
    </string-array>
    <string name="send_img_file_not_exist">文件不存在</string>
    <string name="send_file">发送文件</string>
    <string-array name="send_file_item">
        <item>发送文件的二进制数据</item>
        <item>发送文件的本地路径</item>
    </string-array>
    <string name="send_file_file_not_exist">文件不存在</string>
    <string name="send_pic">发送照片</string>
    <string name="send_music">发送音乐</string>
    <string-array name="send_music_item">
        <item>发送音乐url</item>
        <item>发送低带宽音乐url</item>
    </string-array>
    <string name="send_video">发送视频</string>
    <string-array name="send_video_item">
        <item>发送视频url</item>
        <item>发送低带宽视频url</item>
    </string-array>
    <string name="send_webpage">发送网页</string>
    <string-array name="send_webpage_item">
        <item>发送网页url</item>
    </string-array>
    <string name="send_appdata">发送app消息</string>
    <string-array name="send_appdata_item">
        <item>发送app文件本地路径</item>
        <item>发送app二进制数据</item>
        <item>发送无附件的app</item>
    </string-array>
    <string name="send_emoji">发送表情消息</string>
    <string name="tips_no_network">暂无网络,请您稍后再试</string>
    <string name="tips_click_refresh">点击屏幕刷新</string>
    <string name="tips_no_data">暂无数据,请您稍后再试</string>
</resources>