<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/App_backgroud_grey" >

    <ImageView
        android:id="@+id/loading_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/animation_loading"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/icon_no_network" />

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.0dip"
            android:text="@string/tips_no_network"
            android:textColor="#ff7f7f7f"
            android:textSize="14.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.0dip"
            android:text="@string/tips_click_refresh"
            android:textColor="#ffc7c7c7"
            android:textSize="14.0sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/empty_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/icon_no_data" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.0dip"
            android:text="@string/tips_no_data"
            android:textColor="#ff7f7f7f"
            android:textSize="14.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.0dip"
            android:text="@string/tips_click_refresh"
            android:textColor="#ffc7c7c7"
            android:textSize="14.0sp" />
    </LinearLayout>

</RelativeLayout>